--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Alegreya&family=Asap:wght@400;500&family=Orbitron&display=swap');
 html, body {
     background-color: #646166;
     padding: 0;
@@ -8,13 +8,13 @@ html, body {
 h1 {
     font-size:15px;
     text-align: center;
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Orbitron', sans-serif;
 }
 .calculadora_main {
     display: block;
     margin: 0 auto;
     padding: 20px;
-    background-color: #DC4C46;
+    background-color: #0996f4;
     width: 300px;
     height: 500px;
     border-radius: 25px;
@@ -29,17 +29,27 @@ h1 {
     border-radius: 10px;
     border: 1px solid #646166;
 }
+.calculadora_main td button:hover {
+    background-color: #646166;
+    border: 1px solid rgba(198, 13, 198, 0);
+
+}
 
 #resultado {
     display: block;
     text-align:right;
-    font-size: 40px;
+    font-size: 21px;
     margin: 10px 10px 20px 2px;
     height: 100px;
     line-height: 100px;
     background-color: #C0C0C0;
     width: 250px;
-    border-radius: 25PX;
-    
+    border-radius: 25px;  
+    border: 1px solid #1f2224;
 
+}
+span {
+  font-family:  'Orbitron', sans-serif;
+  padding-right: 10px;
+  
 }
